# ChatMode

./: Makefile  README.md  main  main.c
cli/: Makefile  main  main.c
cli/src/: coordinator.d  message.d  protocol.d  wrapped_mpi.d
include/: client.h  coordinator.h  message.h  protocol.h  runner.h  utils.h  wrapped_mpi.c  wrapped_mpi.h
src/: client.c  coordinator.c  message.c  protocol.c  runner.c  wrapped_mpi.c
ui/: CMakeLists.txt  main_ui.cpp  mainwindow.cpp  mainwindow.h  receptor_mpi.h
